--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
